turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:12: error: ';' expected but '(' found.
droite();
      ^